<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>FrameworkMania</groupId>
	<artifactId>FrameworkMania</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<!-- In which format my build to be created.It can be Jar,War,Ear -->
	<!-- /Users/rahnaalfia/.m2/repository/FrameworkMania/FrameworkMania/0.0.1-SNAPSHOT/FrameworkMania-0.0.1-SNAPSHOT-sources.jar -->
	<packaging>jar</packaging>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<!-- <aspectj.version>1.8.10</aspectj.version> -->
		<!-- maven.test.skip,if true - skip tests and create build jar file alone -->
		<!-- "mvn package -Dmaven.test.skip=true" in terminal -->
		<maven.test.skip>false</maven.test.skip>
	</properties>

	<build>
		<plugins>
			<!-- If we dont give compiler and surefire plugin also ,maven will automatically 
				pick -->
			<!-- Other plugin available in market https://maven.apache.org/plugins/index.html -->
			<!-- Plugin to compile -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- Surefire responsible to run tests -->
			<!-- Plugin to run tests. Here we need to configure testng.xml file if 
				using testng -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>

					<suiteXmlFiles>
						<suiteXmlFile>src/test/resources/testrunners/testng_sanity.xml </suiteXmlFile>
					</suiteXmlFiles>

					<!-- <argLine> -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" 
						</argLine> -->
				</configuration>
				<!-- <dependencies> <dependency> <groupId>org.aspectj</groupId> <artifactId>aspectjweaver</artifactId> 
					<version>${aspectj.version}</version> </dependency> </dependencies> -->
			</plugin>
			<!-- Plugin to generate resources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

	</build>


	<dependencies>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>
		<!-- Third Party wed Driver Manager 4.1.0 -->
		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>4.1.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.3.0</version>
			<!-- For automation purpose use scope as compile or remove the scope <scope>test</scope> 
				<scope>compile</scope> -->
		</dependency>

		<!-- Apache POI- To read Excel -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>3.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-scratchpad</artifactId>
			<version>3.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>ooxml-schemas</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>openxml4j</artifactId>
			<version>1.0-beta</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.5</version>
		</dependency>


	</dependencies>
</project>